--- a/Templates/control-barcodereader.html
+++ b/Templates/control-barcodereader.html
@@ -1,5 +1,5 @@
 <div>
-    <video autoplay playsinline class="hidden" data-on-pluginto="{bind source=__view/bcr path=$videoObj}">
+    <video autoplay playsinline class="nothidden" data-on-pluginto="{bind source=__control path=$videoObj}">
     
     </video>
 </div>
