--- a/Templates/control-mediaread.html
+++ b/Templates/control-mediaread.html
@@ -1,5 +1,3 @@
 <div>
-    <video autoplay playsinline class="nothidden" data-on-pluginto="{bind source=__control path=$videoObj}">
-    
-    </video>
+    <video autoplay playsinline autofocus=true class="nothidden" data-on-pluginto="{bind source=__control path=$videoObj}"></video>
 </div>
