Prepare for styling

--- a/Templates/control-mediaread.html
+++ b/Templates/control-mediaread.html
@@ -1,3 +1,3 @@
-<div>
+<div class='c-barcode'>
     <video autoplay playsinline autofocus=true class="nothidden" data-on-pluginto="{bind source=__control path=$videoObj}"></video>
 </div>
