Start preparing a new vision

--- a/Templates/control-mediaread.html
+++ b/Templates/control-mediaread.html
@@ -1,3 +1,21 @@
-<div class='c-barcode'>
-    <video autoplay playsinline autofocus=true class="nothidden" data-on-pluginto="{bind source=__control path=$videoObj}"></video>
+<div class="c-barcode">
+  <div id="barcodeContainer" class="glowing-animation">
+    <h1 id="barcode">
+      <span class="animatedSpan">[</span><span class="animatedSpan">C</span
+      ><span class="animatedSpan">S</span><span class="animatedSpan">S</span
+      ><span class="animatedSpan"> </span><span class="animatedSpan">A</span
+      ><span class="animatedSpan">n</span><span class="animatedSpan">i</span
+      ><span class="animatedSpan">m</span><span class="animatedSpan">a</span
+      ><span class="animatedSpan">t</span><span class="animatedSpan">i</span
+      ><span class="animatedSpan">o</span><span class="animatedSpan">n</span
+      ><span class="animatedSpan">]</span>
+    </h1>
+  </div>
+  <video
+    autoplay
+    playsinline
+    autofocus="true"
+    class="nothidden"
+    data-on-pluginto="{bind source=__control path=$videoObj}"
+  ></video>
 </div>
