--- a/Css/_containers.scss
+++ b/Css/_containers.scss
@@ -1,5 +1,5 @@
 $containers: (   
     c-barcode: (
-        choices: (colors: emphasize, borders: primary, margins: primary, paddings: primary, shadows: primary, fonts: primary, constants: primary)
+        choices: (colors: primary, borders: primary, margins: primary, paddings: primary, shadows: primary, fonts: primary, constants: primary)
     )
 );
