--- a/Css/_barcode.scss
+++ b/Css/_barcode.scss
@@ -5,6 +5,9 @@
 
 @mixin custom() {
     @include containerGen(c-barcode) using ($choices) {
-        
+        video {
+            width: 100%;
+            height: 100%;
+        }
     }
 }
